# learnopengl

./: .gitignore  CMakeLists.txt  glad.c  imgui.ini  main.cpp
glutils/: glcamera.cpp  gllight.cpp  glmesh.cpp  glmodel.cpp  glshader.cpp  gltexture.cpp  glutils.cpp
imgui/: imgui_theme.h
imguiutils/: imguilights.cpp
include/: cube.h
include/glad/: glad.h
include/glutils/: glcamera.h  glkernel.h  gllight.h  glmesh.h  glmodel.h  glshader.h  gltexture.h  glutils.h
include/imguiutils/: imguilights.h
models/car/: car.mtl
shaders/: diffuseShader.fsh  lightSourceShader.fsh  lightSourceShader.vsh  objectShader.fsh  objectShader.vsh  outlineShader.fsh  screenShader.vsh  singleColorShader.fsh  skyboxShader.fsh  skyboxShader.vsh
